[tool.poetry]
name = "cheated-phone-numbers"
version = "1.0.0"
description = "Service that parses orders from Dodo IS and identifies fraudulent orders among them"
authors = ["Eldos <eldos.baktybekov@gmail.com>"]
readme = "README.md"
packages = [{include = "cheated_phone_numbers"}]

[tool.poetry.dependencies]
python = "^3.11"
httpx = "^0.27.0"
structlog = "^24.2.0"
faststream = {extras = ["rabbit"], version = "^0.5.10"}
pydantic = "^2.7.2"
bs4 = "^0.0.2"
lxml = "^5.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
